--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">bankApp</string>
     <string name="welcome">Witamy w aplikacji bankowej </string>
-<!--    <string name="blik_code_txt"> Tu kod blik</string>-->
+    <string name="_730_51_z">730.51 zł</string>
+    <string name="blik">blik</string>
+    <string name="account_balance">Account balance</string>
+    <!--    <string name="blik_code_txt"> Tu kod blik</string>-->
 </resources>
